# files-service

./: .env.dev  Dockerfile  Makefile  docker-compose.dev.yml  pyproject.toml
.github/workflows/: cicd-stage.yml  development.yml  stage.yml
app/: factories.py  main.py  settings.py
app/auth/: dependencies.py  exceptions.py  jwt.py  schemas.py
app/files/: avatars.py  constants.py  converters.py  dependencies.py  exceptions.py  routes.py  s3.py  savers.py  schemas.py  services.py  utils.py
app/graph/: base.py  router.py  types.py
docker/: Dockerfile.dev  Dockerfile.lint
k8s/stage/app/: service.yml
kubernetes/stage/app/: deployment.yml  ingress.yml  service.yml
